[gd_scene load_steps=2 format=3 uid="uid://cqp4hvlyw50rx"]

[ext_resource type="Script" path="res://src/ui_widgets/formatter_config.gd" id="1_itv71"]

[node name="FormatterConfig" type="PanelContainer"]
offset_right = 21.0
offset_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 1
theme_type_variation = &"SpaciousPanel"
script = ExtResource("1_itv71")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MainContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="FormatterButton" type="Button" parent="HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"TranslucentButton"

[node name="ConfigsContainer" type="VBoxContainer" parent="HBoxContainer/MainContainer"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 6
